test/should-fail/badbrace.f3
/**
 * Ensure that unescaped right braces are caught by the lexer
 * @test/compile-error
 */

var v = "abcd } efghi";
var v = 'abcd } efghi';


